# CMU-MRSD

22Fall/cv-a/hw1/: readme.md
22Fall/cv-a/hw3/: readme.md
22Fall/mec/hw1/: MEC_HW1_jiyoonp_code.m
22Fall/rm/am/: main_q.py
23Spring/MRSD Project/submit/TeamD_jiyoonp_Task7.Part2/arithmetic_node/: CMakeLists.txt  package.xml
23Spring/MRSD Project/submit/TeamD_jiyoonp_Task7.Part2/arithmetic_node/msg/: arithmetic_reply.msg
23Spring/MRSD Project/submit/TeamD_jiyoonp_Task7.Part2/arithmetic_node/src/: arithmetic_node.cpp
23Spring/RA/HW3/: SymDiscreteSearch.py
23Spring/VLR/: dim_calc.py  one_stage_detector.py  simple_cnn.py  train_q1.py  train_q2.py  trainer.py  voc_dataset.py
23Spring/VLR/hw2/: detection_utils.py  test_object_detection.py  train.py
code/: InverseCompositionAffine.py  LucasKanade.py  LucasKanadeAffine2_It.py  LucasKanadeAffine_d_a_comment.py  girlseqrects-wcrt.npy  testAerialSequence.py  testAntSequence.py  testCarSequence.py  testGirlSequence.py  testGirlSequenceWithTemplateCorrection.py
cv-a/hw1/: readme.md
cv-a/hw1/code/: main.py  opts.py  visual_words.py
cv-a/hw2/: readme.md
cv-a/hw2/code/: LucasKanadeAffine.py  girlseqrects.npy  (+3 more)
cv-a/hw3/: readme.md
cv-a/hw4/: readme.md
hw1/code/: visual_recog.py
hw2/code/: aerialseqmasks.npy  ant_masks.npy
hw3/ec/: ec_matchPics.py  helper.py  loadVid.py  matchPics.py  opts.py  planarH.py
hw3/python/: HarryPotterize.py  ar.py  briefRotTest.py  displayMatch.py  makevid.py  opts.py  panaroma.py  planarH.py
rm/ad/: jiyoonp_hw2-1.mlx
sys/TeamD_jiyoonp_Task3/: TeamD_jiyoonp_Task3.ino
(+191 files in other folders)
